@@ -58,7 +58,7 @@ log.ratio.cutoffs = c(-0.9, 0.9), failed = NULL, all.genes = FALSE) {
     bm <- res$results[[id]]$SNV.posterior
     if (!is.null(bm)) {
         segids <- bm$posteriors$seg.id
-        calls$num.snps.segment <- sapply(calls$seg.id, function(i) 
+        calls$num.snps <- sapply(calls$seg.id, function(i) 
             sum(segids==i,na.rm=TRUE))
         calls$M <- bm$posteriors$ML.M.SEGMENT[match(calls$seg.id, segids)] 
         calls$M.flagged <- bm$posteriors$M.SEGMENT.FLAGGED[match(calls$seg.id, segids)] 
