@@ -42,12 +42,11 @@ callLOH <- function(res, id = 1, arm.cutoff = 0.9,
     if (is.null(bm)) {
         .stopRuntimeError("SNV.posterior NULL in callLOH.")
     }    
-    segids <- bm$seg.id
     seg$seg.id <- seq(nrow(seg))
-    seg$num.snps.segment <- sapply(seg$seg.id, function(i) 
-            sum(segids==i,na.rm=TRUE))
-    seg$M <- bm$ML.M.SEGMENT[match(seg$seg.id, segids)] 
-    seg$M.flagged <- bm$M.SEGMENT.FLAGGED[match(seg$seg.id, segids)] 
+    seg$num.snps <- sapply(seg$seg.id, function(i) 
+            sum(bm.seg.id == i,na.rm=TRUE))
+    seg$M <- bm$ML.M.SEGMENT[match(seg$seg.id, bm$seg.id)] 
+    seg$M.flagged <- bm$M.SEGMENT.FLAGGED[match(seg$seg.id, bm$seg.id)] 
     seg$maf.expected <- sapply(seg$seg.id, function(i) {
             x <- bm$ML.AR[which(bm$seg.id == i)]
             if (!length(x)) return(NA)
@@ -55,7 +54,7 @@ callLOH <- function(res, id = 1, arm.cutoff = 0.9,
             # so use median
             median(sapply(x, function(y) ifelse(y>0.5, 1-y, y)))
             })
-    seg$maf.seg <- sapply(seg$seg.id, function(i) {
+    seg$maf.observed <- sapply(seg$seg.id, function(i) {
             x <- bm$AR.ADJUSTED[which(bm$seg.id == i)]
             if (!length(x)) return(NA)
             median(sapply(x, function(y) ifelse(y>0.5, 1-y, y)))
@@ -99,8 +98,8 @@ callLOH <- function(res, id = 1, arm.cutoff = 0.9,
 
     rownames(segLOH) <- NULL
     segLOH <- segLOH[, c("chrom", "loc.start", "loc.end", "arm", "C", "M",
-        "type", "seg.mean", "num.mark", "num.snps.segment", "M.flagged", 
-        "maf.expected", "maf.seg")]
+        "type", "seg.mean", "num.mark", "num.snps", "M.flagged", 
+        "maf.expected", "maf.observed")]
     # standardize colnames
     colnames(segLOH)[1:3] <- c("chr", "start", "end")
     segLOH
