@@ -19,6 +19,7 @@ SIGNIFICANT USER-VISIBLE CHANGES
       SNPs since some users were not aware that segments are missing from
       this output. Use keep.no.snp.segments = FALSE to restore old behaviour.
     o more detailed output of callLOH  
+    o renamed num.snps.segment to num.snps in callAlterations output
 
 
 Changes in version 1.12.0
